# v4l2-to-screen

./: CMakeLists.txt  README.md
include/: common.h  my_opengl.h  my_v4l2.h
shader_source/: fragment_origin.fs  vertex_origin.vs
src/: main.cpp  my_opengl.cpp  my_v4l2.cpp
